ajout main fonts + roboto + refactor code

--- a/sushi_shokudo/src/assets/scss/_variables.scss
+++ b/sushi_shokudo/src/assets/scss/_variables.scss
@@ -3,3 +3,7 @@ $text-color: #000000;
 $background-color: #FFFFFF;
 $primary-color: #FF5A30;
 $secondary-color: #FCBCAC;
+
+// Main fonts
+$headings-font: 'Roboto';
+$body-font: 'Gabarito';
