--- a/sushi_shokudo_ts/src/assets/scss/_mixins.scss
+++ b/sushi_shokudo_ts/src/assets/scss/_mixins.scss
@@ -23,6 +23,14 @@ apply to a css class : set $property with $color and $opacity
 	}
 }
 
-@mixin border-color-style-opacity($border-style, $border-color, $border-opacity) {
+@mixin border-color-style-opacity(
+	$border-top, 
+	$border-right, 
+	$border-bottom, 
+	$border-left, 
+	$border-style, 
+	$border-color, 
+	$border-opacity
+) {
 	
 }
