--- a/sushi_shokudo_ts/src/assets/scss/_variables.scss
+++ b/sushi_shokudo_ts/src/assets/scss/_variables.scss
@@ -1,8 +1,8 @@
 // Main Colors
 $text-color: #000000;
 $background-color: #FFFFFF;
-$primary-color: #FF5A30;
-$secondary-color: #FCBCAC;
+$primary-color: #E6552A;
+$secondary-color: #f9c1b8;
 
 // Main fonts
 $headings-font: 'Roboto';
