--- a/sushi_shokudo_ts/src/assets/scss/_mixins.scss
+++ b/sushi_shokudo_ts/src/assets/scss/_mixins.scss
@@ -7,18 +7,29 @@ $opacity: float between 0 and 1
 
 apply to a css class : set $property with $color and $opacity
 */
-@mixin color-variation-opacity($property, $color, $opacity) {
-	@if $property == color or $property == background-color {
-		@if $opacity >= 0 and $opacity <= 1 {
-			$r: color.channel($color, "red", $space: rgb);
-			$g: color.channel($color, "green", $space: rgb);
-			$b: color.channel($color, "blue", $space: rgb);
-			#{$property}: rgba($r, $g, $b, $opacity);
-		} @else {
-			color: $color;
-		}
+// @mixin color-variation-opacity($property, $color, $opacity) {
+// 	@if $property == color or $property == background-color {
+// 		@if $opacity >= 0 and $opacity <= 1 {
+// 			$r: color.channel($color, "red", $space: rgb);
+// 			$g: color.channel($color, "green", $space: rgb);
+// 			$b: color.channel($color, "blue", $space: rgb);
+// 			#{$property}: rgba($r, $g, $b, $opacity);
+// 		} @else {
+// 			color: $color;
+// 		}
+// 	} @else {
+// 		@warn "#{$property} is not a valid color property";
+// 	}
+// }
+
+@mixin background-color-opacity($color, $opacity) {
+	@if $opacity >= 0 and $opacity <= 1 {
+		$r: color.channel($color, "red", $space: rgb);
+		$g: color.channel($color, "green", $space: rgb);
+		$b: color.channel($color, "blue", $space: rgb);
+		#{$property}: rgba($r, $g, $b, $opacity);
 	} @else {
-		@warn "#{$property} is not a valid color property";
+		color: $color;
 	}
 }
 
