formattage titres menus

--- a/sushi_shokudo_ts/src/assets/scss/_mixins.scss
+++ b/sushi_shokudo_ts/src/assets/scss/_mixins.scss
@@ -4,7 +4,7 @@
 $properties-color-list: color, background-color;
 $border-valid-sides: border, border-top, border-right, border-bottom, border-left;
 $border-valid-styles: dotted, dashed, solid, double, groove, ridge, inset, outset, none;
-$valid-colors: $primary-color, $text-color, $secondary-color, $background-color;
+$valid-colors: $primary-color, $text-color, $secondary-color, $background-color, $complementary-color;
 
 /*
 $property: color or background-color
