--- a/sushi_shokudo_ts/src/assets/scss/_variables.scss
+++ b/sushi_shokudo_ts/src/assets/scss/_variables.scss
@@ -1,6 +1,7 @@
 // Main Colors
 $text-color: #000000;
 $background-color: #FFFFFF;
+$complementary-color: #B8F0F9;
 $primary-color: #E6552A;
 $secondary-color: #f9c1b8;
 
