--- a/sushi_shokudo_ts/src/assets/scss/_variables.scss
+++ b/sushi_shokudo_ts/src/assets/scss/_variables.scss
@@ -6,5 +6,5 @@ $primary-color: #E6552A;
 $secondary-color: #f9c1b8;
 
 // Main fonts
-$headings-font: 'Roboto';
-$body-font: 'Gabarito';
+$headings-font: "Roboto";
+$body-font: "Gabarito";
