--- a/sushi_shokudo_ts/src/assets/scss/_mixins.scss
+++ b/sushi_shokudo_ts/src/assets/scss/_mixins.scss
@@ -1,10 +1,10 @@
 @use 'sass:color';
 @use 'sass:list';
 
-$properties-color-list: color, background-color;
-$border-valid-sides: border, border-top, border-right, border-bottom, border-left;
-$border-valid-styles: dotted, dashed, solid, double, groove, ridge, inset, outset, none;
-$valid-colors: $primary-color, $text-color, $secondary-color, $background-color, $complementary-color;
+// $properties-color-list: color, background-color;
+// $border-valid-sides: border, border-top, border-right, border-bottom, border-left;
+// $border-valid-styles: dotted, dashed, solid, double, groove, ridge, inset, outset, none;
+// $valid-colors: $primary-color, $text-color, $secondary-color, $background-color, $complementary-color;
 
 /*
 $property: color or background-color
@@ -15,13 +15,14 @@ apply to a css class : set $property with $color and $opacity
 */
 
 @mixin property-color-opacity($property, $color, $opacity) {
-	@if list.index($properties-color-list, $property) 
-	and $opacity >= 0 and $opacity <= 1 
-	and list.index($valid-colors, $color) {
-		#{$property}: rgba($color, $opacity);
-	} @else {
-		@warn "check $property, $color, $opacity values";
-	}
+	// @if list.index($properties-color-list, $property) 
+	// and $opacity >= 0 and $opacity <= 1 
+	// and list.index($valid-colors, $color) {
+	// 	#{$property}: rgba($color, $opacity);
+	// } @else {
+	// 	@warn "check $property, $color, $opacity values";
+	// }
+	#{$property}: rgba($color, $opacity);
 }
 
 @mixin flex-direction-alignment($direction, $justify-content, $align-items) {
